--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Simple books API with all tests included",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "babel-node index.js",
     "test": "npm run lint && npm run test-unit && npm run test-integration && npm run test-contract",
@@ -12,7 +13,7 @@
     "lint": "eslint '**/*.js'",
     "lint:fix": "eslint '**/*.js' --fix"
   },
-  "author": "Waldemar Neto <waldemarnt@gmail.com>",
+  "author": "Alexandre Jesus - test",
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
@@ -34,12 +35,23 @@
     "babel-preset-es2015": "^6.9.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
-    "express": "^4.14.0",
+    "express": "^4.17.1",
     "http-status": "^0.2.3",
     "jwt-simple": "^0.5.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
     "sequelize": "^3.23.6",
     "sqlite3": "^3.1.4"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alexandredejesus/API-Livros.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alexandredejesus/API-Livros.git"
+  },
+  "homepage": ""
 }
